--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -10,7 +10,7 @@ const { items } = Astro.props;
 const SITE_URL = "https://ooodmdk.ru";
 ---
 
-<nav aria-label="Хлебные крошки" class="py-4 px-8 lg:px-24">
+<nav aria-label="Хлебные крошки" class="py-4 px-8 lg:px-24 header-offset">
   <ol
     class="flex flex-wrap items-center space-x-2 text-sm text-gray-600"
     itemscope
