--- a/src/components/Up.astro
+++ b/src/components/Up.astro
@@ -1,10 +1,10 @@
 <button
   id="scroll-to-top"
-  class="fixed bottom-8 right-8 w-14 h-14 bg-gradient-to-br from-yellow-500 to-yellow-600 text-black rounded-2xl shadow-2xl shadow-yellow-500/25 hover:shadow-yellow-400/40 hover:from-yellow-400 hover:to-yellow-500 transition-all duration-300 transform hover:scale-110 z-50 opacity-0 invisible"
+  class="fixed bottom-4 xs:bottom-6 sm:bottom-8 right-4 xs:right-6 sm:right-8 w-12 h-12 xs:w-14 xs:h-14 bg-gradient-to-br from-yellow-500 to-yellow-600 text-black rounded-xl xs:rounded-2xl shadow-2xl shadow-yellow-500/25 hover:shadow-yellow-400/40 hover:from-yellow-400 hover:to-yellow-500 transition-all duration-300 transform hover:scale-110 z-50 opacity-0 invisible"
   aria-label="Прокрутить наверх"
 >
   <svg
-    class="w-6 h-6 mx-auto"
+    class="w-5 h-5 xs:w-6 xs:h-6 mx-auto"
     fill="none"
     stroke="currentColor"
     viewBox="0 0 24 24"
