--- a/src/pages/blog/platinovye-metally-promyshlennost.astro
+++ b/src/pages/blog/platinovye-metally-promyshlennost.astro
@@ -25,7 +25,7 @@ const breadcrumbItems = [
   </Fragment>
 
   <!-- Hero секция статьи -->
-  <section class="relative bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white pt-32 pb-20 px-8 lg:px-24 overflow-hidden">
+  <section class="relative bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white header-offset pb-20 px-8 lg:px-24 overflow-hidden">
     <!-- Декоративные элементы -->
     <div class="absolute inset-0 opacity-10">
       <div class="absolute top-20 left-20 w-32 h-32 bg-blue-500 rounded-full blur-3xl"></div>
