--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@
       </h1>
       
       <p class="mt-4 xs:mt-6 sm:mt-8 lg:mt-12 text-white text-base xs:text-lg sm:text-xl md:text-2xl lg:text-3xl max-w-3xl font-gilroy leading-relaxed animate-slide-in">
-        ООО «ДМДК» — ведущий поставщик аффинированных драгоценных металлов. 
+        ООО «ДМДК» — ведущий поставщик продукции из драгоценных металлов.
         <span class="text-yellow-400 font-semibold">Блеск и надежность в каждом грамме.</span>
       </p>
       
